feat(ext,srv): Phase 2 - API网关 + 云模型支持 + AES加密存储API Key